Refactor: WIP